# reward-proxy-stdp

./: CLAUDE.md  README.md  config.toml  example.py  main.py  pyproject.toml
datasets/: __init__.py  pytorch_wrapper.py
nets/: __init__.py  archetypes.py  factory.py  net_data.py  net_exec.py
nets/initialization/: __init__.py  small_world.py
nets/learning/: stdp.py
